# math

./: .gitignore  CMakeLists.txt
MathTest/: ExEuclideanAlgoForMultipleIntegers.txt  ExEuclideanAlgoForTwoIntegers.txt  InterpolationTest.cpp  InterpolationTest.h  InterpolationTest_CubicSpline.cpp  InterpolationTest_LagrangePoly.cpp  InterpolationTest_NewtonPoly.cpp  InterpolationTest_Samples.cpp  TestMathGcd.cpp  TestMathGcd.txt  TestMathGcdm.cpp  TestMathGcdm.txt  TestMathNewtonPoly.cpp  TestMathNewtonPoly2.cpp  TestMathNewtonPoly2.txt  TestMath_gcdm.cpp  gen.py  scripts.py
NumaTest/: IntegralTest.h  InterpolationTest.h  InterpolationTest_CubicSpline.cpp  InterpolationTest_LagrangePoly.cpp  InterpolationTest_NewtonPoly.cpp  InterpolationTest_SectionedCubicHerimite.cpp  Main.cpp  Sample.cpp  test.h
NumtTest/: BigIntegerTest.cpp  EuclideanAlgoTest.cpp  EuclideanAlgoTest.h  EuclideanAlgoTest_.cpp  common.h
include/: debug.h  utils.h
include/numa/: integ.h  intrpl.h
include/numt/: bigint.h  numt.h
math/: integer.h  main.cpp  numa.cpp  numa.h  numt.h  utils.h
math/numa/: common.h  integ.h  intrpl.h  numa.cpp  numa.h.old  numa.h.remove.old  numa.new.h.old  types.h
math/numt/: numt.cpp  numt.h
src/: CMakeLists.txt  bigint.cpp  numt.cpp
test/: CMakeLists.txt
test/numa/: CMakeLists.txt  CubicSplineTest.cpp  IntegralTest.cpp  IntegralTest.h  InterpolationTest.cpp  InterpolationTest.h  LagrangePolyTest.cpp  NewtonPolyTest.cpp  SectionedCubicHerimiteTest.cpp
test/numt/: CMakeLists.txt  CppTest.cpp  EuclideanAlgoTest.cpp
test/numt/bigint/: AdditionTest.cpp  AttributeTest.cpp  StringTest.cpp  SubtractionTest.cpp
